- Added calculations for HSV statistics per patch - Values for RGB colour statistics are now scaled to `(0,1)`, in line with the HSV statistics - Fixed progress bar issues in several functions - Made the `sample` variable optional in `docs/examples/download_city_images.ipynb` - Moved `examples/docs/segmentation.ipynb` to `examples/docs/segmentation/maskformer.ipynb` and updated the documentation accordingly. This is in preparation for adding the LangSAM model + examples. - Updated the style sheet to make the central widget wider so that images and tables can be displayed without horizontal scrolling.

--- a/docs/docs/stylesheets/extra.css
+++ b/docs/docs/stylesheets/extra.css
@@ -7,3 +7,9 @@
 .jupyter-wrapper .jp-OutputArea-output pre {
     max-height: 300px;
 }
+
+.md-grid {
+    margin-left: 30px;
+    margin-right: 10px;
+    max-width: 100%;
+}
